# vibeverse

./: .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierignore  .prettierrc  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  canister_ids.json  dfx.json  next.config.js  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.js  tsconfig.json  webpack.config.js
.github/workflows/: backend.yaml  ci.yml
app/: globals.css  layout.tsx  page.tsx
app/dashboard/: error.tsx  layout.tsx  loading.tsx  page.tsx
app/login/: page.tsx
components/: navigation.jsx  sidebar.jsx
components/3D/: Asset3D.jsx  AssetLoader.jsx  AssetModel.jsx  CanvasModel.jsx  Item_3D.jsx
components/BackendActor/: index.ts
components/Mixpanel/: index.tsx
components/dashboard/: categories.jsx  navigation.jsx  preview.jsx
components/login/: ImageSlider.jsx
constants/: index.js
declarations/vibeverse_assets/: index.d.ts  index.js  vibeverse_assets.did.d.ts  vibeverse_assets.did.js
declarations/vibeverse_backend/: index.d.ts  index.js  vibeverse_backend.did.d.ts  vibeverse_backend.did.js
libraries/: Cargo.toml
libraries/canister_client_macros/src/: lib.rs
libraries/src/: lib.rs
public/.well-known/: ic-domains
public/erevald_3D/: license.txt  scene.gltf
public/logo_3D/: scene.gltf
scripts/: deploy-test-data.sh  download-nns-canister-wasm.sh  generate-did.sh  generate-wasm.sh  run-integration-tests.sh
src/: config.ts
src/app/: layout.tsx  page.tsx
src/components/: index.ts
src/constants/: index.js
src/helpers/: nft.ts  upload.ts
src/hooks/: index.ts  useAssetManager.ts  useClaimRewards.ts  useCommunityActions.ts  useCreateCommunity.ts  useCreateCourse.ts  useFinishCourse.ts  useGetCollection.ts  useGetCollectionById.ts  useGetCollectionNfts.ts  useGetCollections.ts  useGetCollectionsCreatedByPrincipal.ts  useGetCommunities.ts  useGetCommunitiesFollowed.ts  useGetCommunity.ts  useGetCourse.ts  useGetCourses.ts  useGetCreatorProfile.ts  useGetEarnedBadges.ts  useGetEmojis.ts  useGetNftMetadata.ts  useGetNfts.ts  useGetPrincipalCollections.ts  useGetPrincipalNfts.ts  useGetProfile.ts  (+3 more)
src/types/: nft.ts  (+6 more)
vibeverse_backend/: Cargo.toml  vibeverse_backend.did
vibeverse_backend/backend/: Cargo.toml  vibeverse_backend.did
vibeverse_backend/backend/src/: administrative.rs  admins.rs  communities.rs  courses.rs  creators.rs  creators_tests.rs  guards.rs  lib.rs  memory.rs  nft_metadata.rs  nfts.rs  nfts_tests.rs  reactions.rs
vibeverse_backend/backend/src/interface/: icrc_1.rs  mod.rs  vibe_token.rs
vibeverse_backend/backend/src/lifecycle/: init.rs  mod.rs  post_upgrade.rs  pre_upgrade.rs
vibeverse_backend/backend/src/modules/: creators_tests.rs  mod.rs  nfts.rs  nfts_tests.rs
vibeverse_backend/backend/src/nfts_metadata/: nfts_metadata.rs
vibeverse_backend/backend/src/types/: badge.rs  community.rs  course.rs  creator.rs  emoji.rs  memory.rs  mod.rs  nft.rs  stable_nat.rs  storable_principal.rs
vibeverse_backend/integration_tests/: Cargo.toml
vibeverse_backend/integration_tests/src/: lib.rs  nfts_tests.rs  rng.rs  setup.rs  utils.rs  wasms.rs
vibeverse_backend/integration_tests/src/client/: backend.rs  mod.rs
vibeverse_backend/integration_tests/src/types/: canister_wasm.rs  mod.rs
(+201 files in other folders)
