[workspace]
members = [
  "libraries",
  "vibeverse_backend/backend",
  "vibeverse_backend/integration_tests",
]
resolver = "2"

[workspace.dependencies]
candid = "0.9.9"
ic-cdk = "0.11.3"
ic-cdk-macros = "0.8.1"
ic-stable-structures = "0.6.0"
ic0 = "0.21.1"
pocket-ic = "1.0"
quote = "1.0.33"
rand = "0.8.5"
serde = { version = "1.0.190", features = ["derive"] }
serde_bytes = "0.11.12"
serde_json = "1.0.105"
sha2 = "0.10.7"
syn = "2.0.29"
test-case = "3.1.0"
tracing = "0.1.37"
tracing-attributes = "0.1.26"
tracing-subscriber = "0.3.17"
