[package]
name = "libraries"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }

canister_client = { path = "./canister_client" }
canister_client_macros = { path = "./canister_client_macros" }
canister_logger = { path = "./canister_logger" }
canister_state_macros = { path = "./canister_state_macros" }
canister_time = { path = "./canister_time" }
human_readable = { path = "./human_readable" }
human_readable_derive = { path = "./human_readable_derive" }
msgpack = { path = "./msgpack" }
sha256 = { path = "./sha256" }
serializer = { path = "./serializer" }
