[package]
name = "vibeverse_backend"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-macros = { workspace = true }
ic-stable-structures = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1.77"
itertools = "0.12.0"
libraries = { path = "../../libraries" }

[dev-dependencies]
serde_json = "1.0.107"
serde_cbor = "0.11.2"
