[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
ic-ledger-types = "0.8.0"
candid = { workspace = true }
ic-cdk = { workspace = true }
lazy_static = "1.4.0"
libraries = { path = "../../libraries" }
pocket-ic = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_bytes = { workspace = true }
serial_test = "2.0.0"
test-case = { workspace = true }
